# xmlparse

./: CMakeLists.txt  README.md  parse.py  parse.sh
config/: TransferFight.xml
src/: AutoParseConfig.cpp  AutoParseConfig.h  TransferFight.cpp  TransferFight.h  singleton.h  test.cpp  tinyxml2.h  vartype.cpp  vartype.h
